# claude-code-trading-setup

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/: .claude.json  (+6 more)
Downloads/Spartan_Labs/website/: .claudeconfig  .env.example  .env.spartan.example  .gitignore  =1.26.0  AGENT_SYSTEM_COMPLETE_STATUS.md  AI_ML_MEMORY_OPTIMIZATION.md  AI_MONITORING_GUIDE.md  ALACRITTY_SETUP.md  ALL_SOURCES_DATA_COMPLETE.md  ALPHASTREAM_COMPLETE_SETUP.txt  ALPHASTREAM_QUICK_REFERENCE.txt  ALPHASTREAM_STARTUP_GUIDE.md  API_ARCHITECTURE.md  API_DATA_SOURCES.md  API_ENDPOINTS_REFERENCE.md  API_INTEGRATION_COMPLETE.md  API_INTEGRATION_GUIDE.md  API_KEY_SETUP_GUIDE.md  API_PROXY_GUIDE.md  API_SETUP_SUMMARY.md  API_STATUS_REPORT_COMPLETE.md  API_TEST_REPORT.md  ARCHITECTURE.md  AUTONOMOUS_AGENT_SYSTEM_DEPLOYED.md  AUTONOMOUS_DATA_VALIDATION_COMPLETE.md  AUTONOMOUS_HEALING_FILES.txt  AUTONOMOUS_HEALING_SUMMARY.md  AUTONOMOUS_HEALING_SYSTEM.md  AUTONOMOUS_MONITORING_COMPLETE.md  AUTONOMOUS_SYSTEM_COMPLETE.md  AUTONOMOUS_SYSTEM_GUIDE.md  BULLETPROOF_STARTUP.py  BYPASS_MODE_IMPLEMENTATION_SUMMARY.md  BYPASS_MODE_QUICK_REF.txt  BYPASS_MODE_SUMMARY.txt  CAPITAL_FLOW_STYLING_ANALYSIS.md  CAPITAL_FLOW_SWING_TRADING_ANALYSIS.md  CHECK_AND_RUN_COT.sh  CHECK_DATA_POINT_AGENTS.sh  (+386 more)
Downloads/Spartan_Labs/website/.gemini/: settings.json
Downloads/Spartan_Labs/website/agents/: __init__.py  agent_health_api.py  composite_data_refresh_agent.py  crypto_intelligence_agent.py  data_point_master_orchestrator.py  market_data_agent.py  master_agent_orchestrator.py  recession_indicators_agent.py  website_data_validator_agent.py
Downloads/Spartan_Labs/website/agents/data_points/: base_data_point_agent.py  btc_usd_agent.py  qqq_agent.py  spy_agent.py  treasury_10y_agent.py  vix_agent.py
Downloads/Spartan_Labs/website/agents/tier1/: __init__.py  market_agents.py
Downloads/Spartan_Labs/website/agents/website_monitor/: Dockerfile.monitor  README.md  __init__.py  config.yaml  requirements_monitor.txt  website_monitor.mojo  website_monitor.py
Downloads/Spartan_Labs/website/api/: README.md  correlation_api.py  cot_scanner_api.py  daily_planet_api.py  garp_api.py  highlights_api.py  marketaux_api.py  requirements.txt
Downloads/Spartan_Labs/website/config/: .env.example  config.yaml  data_sources.yaml
Downloads/Spartan_Labs/website/css/: spartan_theme.css
Downloads/Spartan_Labs/website/db/: init.sql
Downloads/Spartan_Labs/website/db/init/: 01_create_schemas_and_tables.sql
Downloads/Spartan_Labs/website/docs/: agent-integration.md  architecture.md  broker_alternatives.md  development-guide.md  pyrefly-guide.md  quick_start.md  quickstart.md  troubleshooting.md
Downloads/Spartan_Labs/website/examples/: README.md  basic_trading.py  simple_test.py  yahoo_finance_trading.py
Downloads/Spartan_Labs/website/frontend/css/: intermarket_ticker.css  spartan_theme.css
Downloads/Spartan_Labs/website/frontend/dashboards/: boom_or_bust.html  correlation_matrix.html  daily_planet.html  econometrics.html  fred_global_complete.html  garp.html  global_capital_flow_swing_trading.html  index.html
Downloads/Spartan_Labs/website/frontend/pages/: breakthrough_insights.html  elite_tools.html  elite_trading_strategies.html  fundamental_analysis.html  harmonic_cycles.html  historical_connections.html  inflation_dashboard.html  intelligence_reports.html  intermarket_relationships.html  market_cycles.html  market_gauges.html  pattern_discovery_terminal.html  pattern_finder_hub.html  roce_research.html  seasonality_research.html  symbol_research.html  symbol_search_connections.html  unified_market_dashboard.html
Downloads/Spartan_Labs/website/init/: COMPLETE_SYSTEM_OVERVIEW.md  QUICK_START.md  spartan-data-validator.service
Downloads/Spartan_Labs/website/init/agents/: alert_watcher.md  data_preloader.md  website_monitor.md
Downloads/Spartan_Labs/website/js/: auto_refresh.js  capital_flow_visualizer.js  composite_score_engine.js  composite_score_engine_clean.js  fred_api_client.js  global_symbols_database_loader.js  historical_connections_data.js  indicator_data_fetcher.js  market_visualizations.js  no-na-integration.js  section_visibility_manager.js  spartan-preloader.js  spartan_ticker.css  swing_dashboard_fetcher.js  symbol_recommendations.js  timeframe_data_fetcher_18_36_months.js  timeframe_data_fetcher_1_2_weeks.js  timeframe_data_fetcher_1_3_months.js  timeframe_data_fetcher_6_18_months.js
Downloads/Spartan_Labs/website/output/: latest_trade_sheet.txt
Downloads/Spartan_Labs/website/screener/: screeners_hub.html
Downloads/Spartan_Labs/website/scripts/: NANO_BANANA_SETUP_GUIDE.md  QUICK_START.txt  REGENERATE_APP_PASSWORD.md  SETUP_COMPLETE_SUMMARY.txt  SETUP_SUCCESS_INFOGRAPHIC.txt  START_HERE.txt  configure_credentials.sh  nano_banana_daily_email.py  nano_banana_wrapper.sh  populate_fred_data.py  populate_missing_data.py  populate_symbols_from_polygon.py  setup_check.py  setup_complete.sh  setup_nano_banana_cron.sh  setup_success_infographic.html  validate_env.py
Downloads/Spartan_Labs/website/scripts/data/: create_symbols_database_json.py  emergency_data_loader.py
Downloads/Spartan_Labs/website/scripts/email/: cot_daily_emailer.py
Downloads/Spartan_Labs/website/scripts/monitoring/: ai_monitor.py  api_validator_fixer.py  data_guardian_agent.py  data_integrity_audit.py  (+1 more)
Downloads/Spartan_Labs/website/src/: __init__.py  claude_code_bridge.py  data_preloader.py  data_refresh_scheduler.py  data_validation_monitor.py  polygon_symbol_sync.py
Downloads/Spartan_Labs/website/startup_scripts/: FileSystemIndexer.bat  FileSystemIndexer.ps1  INSTALL_FIXED_STARTUP_SCRIPTS.bat  INSTALL_FIXED_STARTUP_SCRIPTS.ps1  QUICK_START.txt  README.md  RUN_INSTALLER.txt  UnifiedTradingHub.bat  UnifiedTradingHub.ps1  debian-trading-hub.bat  debian-trading-hub.ps1  wezterm-trading-hub.bat  wezterm-trading-hub.ps1
Downloads/Spartan_Labs/website/templates/: guardian_test.html
Downloads/Spartan_Labs/website/web_dashboard/: ACTIVATE_AUTO_LAUNCH.bat  LAUNCH_WEB_DASHBOARD.bat  auto_launcher.py  launch_dashboard.vbs  server.py
(+217 files in other folders)
